# gemini-swim

./: README.md  SwimGradeTest1.csv  database.py  main.py  pyproject.toml  test.ipynb
src/: __init__.py  app.py  database.py  gemini.py  test.py  visualization.py
src/static/: style.css
src/templates/: base.html  index.html  query.html  results.html
